--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página de geração de certificado de conclusão de curso">
+    <meta name="keywords" content="certificado, curso, conclusão, PDF">
+    <meta name="author" content="Centro de Desenvolvimento e Cidadania">
     <title>Geração de Certificado de Conclusão</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,20 +16,20 @@
 </header>
 
 <div class="container">
-    <section class="cadastro">
-        <h2>Preencha seus dados</h2>
+    <section class="cadastro" aria-labelledby="form-title">
+        <h2 id="form-title">Preencha seus dados</h2>
         <form id="userForm">
             <div class="form-group">
                 <label for="nomeCompleto">Nome Completo:</label>
-                <input type="text" id="nomeCompleto" name="nomeCompleto" placeholder="Seu nome completo" required />
+                <input type="text" id="nomeCompleto" name="nomeCompleto" placeholder="Seu nome completo" required aria-required="true" />
             </div>
             <div class="form-group">
                 <label for="dataConclusao">Data de Conclusão:</label>
-                <input type="date" id="dataConclusao" name="dataConclusao" required />
+                <input type="date" id="dataConclusao" name="dataConclusao" required aria-required="true" />
             </div>
             <div class="form-group">
                 <label for="curso">Curso:</label>
-                <input type="text" id="curso" name="curso" placeholder="Nome do curso" required />
+                <input type="text" id="curso" name="curso" placeholder="Nome do curso" required aria-required="true" />
             </div>
             <div class="buttons">
                 <button type="button" onclick="gerarPDF()">Gerar PDF</button>
@@ -35,7 +38,7 @@
         </form>
     </section>
     
-    <div id="successMessage" style="display:none;">
+    <div id="successMessage" style="display:none;" aria-live="polite">
         <p>PDF gerado com sucesso!</p>
     </div>
 </div>
